(ADD) LIST AND UPDATE ITEM

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,34 +1,3 @@
 <div class="container main">
-  <div class="container text-center">
-      <h3>LIST ITEM</h3>
-  </div>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Department</th>
-        <th scope="col">Responsable</th>
-        <th scope="col">Years</th>
-        <th scope="col">Zone</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of items | slice:5:7; let i=index">
-        <th>{{ item.name }}</th>
-        <th>{{ item.department }}</th>
-        <th>{{ item.responsable }}</th>
-        <th>{{ item.years }}</th>
-        <th>{{ item.zone }}</th>
-      </tr>
-    </tbody>
-  </table>
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item"><a class="page-link">Previous</a></li>
-      <li class="page-item"><a class="page-link">1</a></li>
-      <li class="page-item"><a class="page-link">2</a></li>
-      <li class="page-item"><a class="page-link">3</a></li>
-      <li class="page-item"><a class="page-link">Next</a></li>
-    </ul>
-  </nav>
+  <h1>Home</h1>
 </div>
