--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,6 +16,9 @@
           <a class="nav-link" aria-current="page" routerLink="home" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="items/list" routerLinkActive="active">List Item</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="items/create" routerLinkActive="active">Create Item</a>
         </li>
       </ul>
